--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview --host",
-    "test": "vite build && vite preview --host"  },
+    "test": "vite build && vite preview --host"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,6 +18,8 @@
     "vite-plugin-checker": "^0.8.0"
   },
   "dependencies": {
+    "@types/howler": "^2.2.12",
+    "howler": "^2.2.4",
     "pixi.js": "^8.4.1"
   }
 }
